# medical-software

./: .gitignore  Readme.md  main.py  package-lock.json
backend/: .gitignore  package-lock.json  package.json  server.js  tsconfig.json
backend/quart-api/: .gitignore  pyproject.toml  render.yaml
backend/quart-api/src/data_analysis/: Categorising Dataset using Symptom Weights.ipynb  Cleaning Dataset.ipynb  Data_Overview.ipynb  Disease Prediction.ipynb  Disease prediction using Sentence Transformer.ipynb  KNN and Decision tree.ipynb  Predictive_Modeling.ipynb  Prescriptive_Analytics.ipynb  Univariate_Analysis.ipynb
backend/quart-api/src/data_analysis/models/: K-Nearest_Neighbors_model.pkl  Logistic_Regression_model.pkl  Naive_Bayes_model.pkl  Random_Forest_model.pkl  decision_tree_model.pkl  disease_symptom_lookup.pkl  knn_model.pkl  label_encoder.pkl  precaution_map.pkl  severity_thresholds.pkl  symptom_encoder.pkl
backend/quart-api/src/data_analysis/references/.ipynb_checkpoints/: main-checkpoint.py
backend/quart-api/src/quart_api/: app.py  main.py
backend/quart-api/src/quart_api/model/: K-Nearest_Neighbors_model.pkl  Logistic_Regression_model.pkl  Neural_Network_model.pkl  Random_Forest_model.pkl  Support_Vector_Machine_model.pkl  __init__.py  decision_tree_model.pkl  get_specialist.pkl  knn_model.pkl  label_encoder.pkl  severity_map.pkl
backend/quart-api/src/quart_api/routes/: __init__.py  home.py  predict.py
backend/quart-api/src/quart_api/service/: __init__.py  predict_service.py
backend/quart-api/src/quart_api/utils/: __init__.py  symptom_encoder.py
(+251 files in other folders)
