[project]
name = "quart-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Ishan1012",email = "ishandwivedi1210@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "quart[dotenv] (>=0.20.0,<0.21.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "quart-cors (>=0.8.0,<0.9.0)"
]

[tool.poetry]
packages = [{include = "quart_api", from = "src"}]

[tool.poetry.scripts]
start = "quart_api.main:run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
